ARGO-1996 create recomputation: allow setting up recomputation requester name/email
